添加点击搜索图标进入相应搜索网站

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         <div class="search-wrap">
           <!-- 谷歌搜索 -->
           <div class="search-box">
-            <div class="search-logo search-logo-g"></div>
+            <a href="https://www.google.com">
+              <div class="search-logo search-logo-g"></div>
+            </a>
             <form class="form" id="g-search-form" action="https://www.google.com/search?" method="get">
               <input type="search" name="q" value="" class="search-text" id="g-search-input">
               <input type="submit" name="" value="" class="search-btn">
@@ -81,7 +83,9 @@
           </div>
           <!-- 百度搜索 -->
           <div class="search-box">
-            <div class="search-logo search-logo-b"></div>
+            <a href="https://www.baidu.com">
+              <div class="search-logo search-logo-b"></div>
+            </a>
             <form class="form" id="b-search-form" action="https://www.baidu.com/s" method="get">
               <input type="search" name="wd" value="" class="search-text" id="b-search-input">
               <input type="submit" name="" value="" class="search-btn">
